# cpu-monitor

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: config.py  main.py  protocols.py  tools.py
src/gui/: database.py  tray_counter.py
src/metrics/: cpu.py
