[tool.poetry]
name = "cpu-monitor"
version = "0.1.0"
description = "Check your CPU load/temp"
authors = ["Roman"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
