[tool.poetry]
name = "cpu-monitor"
version = "0.1.0"
description = "Check your CPU load/temp"
authors = ["Roman"]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "5.9.5"
PyQt5 = "5.15.9"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
crashtest = "0.4.1"
cryptography = "41.0.6"
distlib = "0.3.7"
dulwich = "0.21.6"
filelock = "3.12.4"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jeepney = "0.8.0"
jsonschema = "4.17.3"
keyring = "24.2.0"
more-itertools = "10.1.0"
msgpack = "1.0.5"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
poetry = "1.6.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.12.2"
pyrsistent = "0.19.3"
rapidfuzz = "2.15.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.3"
tomlkit = "0.12.1"
trove-classifiers = "2023.8.7"
urllib3 = "2.0.4"
virtualenv = "20.24.5"
zipp = "3.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
